# wm-pytorch

./: .gitignore  LICENSE  README.md  _vizdoom.ini  data_collect.py  encode_latents.py  env.py  main.py  modeling.py  pyproject.toml
training/: train_controller.py  train_mdn.py  train_vae.py
wm/: __init__.py  env.py  modeling.py
